--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,10 @@
     <nav class="navbar navbar-light bg-light">
       <h3><a style="color:rgb(0, 102, 255)" class="nav-link" href="{{url_for('home')}}">Home</a></h3>
     </nav>
+     <div class="jumbotron">
+        {% block content %}
+        {% endblock %}
+      </div>
   </div>
   </div>
 </body>
